# nexus

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: customers.csv  deals.csv  policies.md  support_tickets.csv
frontend/: Dockerfile
frontend/nginx/: default.conf
frontend/src/: App.tsx  index.css
frontend/src/components/: AuditPanel.tsx  ChatInterface.tsx  DataSourcePanel.tsx  ExecutionTimeline.tsx  PlanPreview.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/types/: index.ts
infra/grafana/dashboards/: nexus.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
nexus/: __init__.py  config.py
nexus/api/: main.py  routes.py  ws.py
nexus/connect/: __init__.py  file_ingest.py  postgres.py  registry.py  rest_api.py  vector_store.py
nexus/core/: __init__.py  context.py  executor.py  intent.py  memory.py  planner.py  types.py
nexus/eval/: __init__.py  citation.py  regression.py  scorer.py
nexus/observe/: audit.py  logger.py  metrics.py
nexus/train/: __init__.py  data_generator.py  evaluator.py  lora_trainer.py
scripts/: demo.py  ingest_docs.py  seed_db.py
tests/: test_api.py  test_connectors.py  test_context.py  test_eval.py  test_executor.py  test_integration.py  test_intent.py  test_observe.py  test_planner.py  test_train.py
